<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingTop="24dp"
        android:paddingEnd="24dp"
        android:paddingStart="24dp"
        android:paddingBottom="12dp">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_choose_pic_action"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@drawable/shape_radius8_33ffffff"
            android:backgroundTint="#FF7708"
            android:paddingHorizontal="12dp"
            android:paddingVertical="12dp"
            android:text="@string/choose_your_avatar"
            android:textSize="16sp"
            android:gravity="center"
            app:layout_constraintBottom_toBottomOf="@+id/iv_user_avatar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/iv_user_avatar"
            app:layout_constraintTop_toTopOf="@+id/iv_user_avatar" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/iv_user_avatar"
            android:layout_width="109dp"
            android:layout_height="109dp"
            android:foreground="@drawable/shape_radius24_33ffffff"
            android:foregroundTint="#FF7708"
            android:padding="8dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/outline_account_circle_24" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_name"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/your_name"
            app:boxCornerRadiusBottomEnd="12dp"
            app:boxCornerRadiusBottomStart="12dp"
            app:boxCornerRadiusTopEnd="12dp"
            app:boxCornerRadiusTopStart="12dp"
            android:layout_marginTop="32dp"
            app:helperText="@string/nick_name_helper_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/iv_user_avatar">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLines="1" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_account"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:hint="@string/account"
            app:boxCornerRadiusBottomEnd="12dp"
            app:boxCornerRadiusTopEnd="12dp"
            app:boxCornerRadiusBottomStart="12dp"
            app:boxCornerRadiusTopStart="12dp"
            app:helperText="@string/account_helper_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/til_name"
            app:layout_constraintTop_toBottomOf="@+id/til_name">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLines="1" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_password"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:hint="@string/password"
            app:boxCornerRadiusBottomEnd="12dp"
            app:boxCornerRadiusTopEnd="12dp"
            app:boxCornerRadiusBottomStart="12dp"
            app:boxCornerRadiusTopStart="12dp"
            app:helperText="@string/password_helper_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/til_name"
            app:layout_constraintTop_toBottomOf="@+id/til_account">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLines="1" />
        </com.google.android.material.textfield.TextInputLayout>

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/appCompatImageView6"
            android:layout_width="14dp"
            android:layout_height="14dp"
            app:layout_constraintBottom_toBottomOf="@+id/materialTextView9"
            app:layout_constraintEnd_toStartOf="@+id/materialTextView9"
            android:layout_marginEnd="4dp"
            app:layout_constraintTop_toTopOf="@+id/materialTextView9"
            app:srcCompat="@drawable/outline_lightbulb_24" />
        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/materialTextView9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/more_information_you_can_set_after_login"
            android:textSize="10sp"
            android:layout_marginBottom="12dp"
            app:layout_constraintBottom_toTopOf="@+id/btn_sign_up_action"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_sign_up_action"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="28dp"
            android:text="@string/ok"
            android:textAllCaps="true"
            app:cornerRadius="12dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/til_name"
            app:layout_constraintStart_toStartOf="@+id/iv_user_avatar"
            app:layout_goneMarginBottom="24dp" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>